# gh-inbox

./: .gitignore  Cargo.toml  Makefile  README.md  renovate.json
.github/workflows/: release.yml.disabled
src/: cli.rs  filter.rs  github.rs  lib.rs  main.rs  model.rs  output.rs  progress.rs  saved.rs
