[package]
name = "gh-inbox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tabwriter = "1.4.1"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
url = "2.5.7"

[dev-dependencies]
tempfile = "3.23.0"
